--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ section {
                               <div class="dropdown-content">
                                 <a href="#">Courses</a>
                                 <a href="#">Training Centers</a>
-                                <a href="where_to_ski">Where to Ski</a>
+                                <a href="where_to_ski.html">Where to Ski</a>
                               </div>
                             </div>
                     
