--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                           <div class="dropdown">
                               <button class="dropbtn">Training</button>
                               <div class="dropdown-content">
-                                <a href="#">Courses</a>
-                                <a href="#">Training Centers</a>
+                                <a href="SnowSchoolPage.html">Courses</a>
+                                <a href="RGUSkiTripPage.html">Ski trip</a>
                                 <a href="where_to_ski.html">Where to Ski</a>
                               </div>
                             </div>
