--- a/equipment.html
+++ b/equipment.html
@@ -415,8 +415,8 @@ section {
                           <div class="dropdown">
                               <button class="dropbtn">Training</button>
                               <div class="dropdown-content">
-                                <a href="#">Courses</a>
-                                <a href="#">Training Centers</a>
+                                <a href="SnowSchoolPage.html">Courses</a>
+                                <a href="RGUSkiTripPage.html">Ski trip</a>
                                 <a href="#">Where to Ski</a>
                               </div>
                             </div>
