--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                     <div class="dropdown">
                         <button class="dropbtn">Equipment</button>
                         <div class="dropdown-content">
-                          <a href="#">Ski</a>
-                          <a href="#">Snowboarding</a>
-                          <a href="#">General</a>
+                          <a href="skiequip.html">Ski</a>
+                          <a href="snowboardequip.html">Snowboarding</a>
+                          <a href="equipment.html">General</a>
                         </div>
                       </div>
                       <div class="dropdown">
