--- a/RGUSkiTripPage.html
+++ b/RGUSkiTripPage.html
@@ -250,9 +250,9 @@ h1 {
     
 <div class="header">  
 <div class="social">
-  <a href="#" class="fa fa-facebook"></a>
-  <a href="#" class="fa fa-twitter"></a>
-  <a href="#" class="fa fa-instagram"></a>
+  <a href="https://www.facebook.com/RGUsnowsports/" class="fa fa-facebook"></a>
+  <a href="https://twitter.com/rgusnow?lang=en" class="fa fa-twitter"></a>
+  <a href="https://www.instagram.com/rgusnow/?hl=en" class="fa fa-instagram"></a>
   </div>  
 </div>
     
@@ -321,8 +321,8 @@ h1 {
                           <div class="dropdown">
                               <button class="dropbtn">Training</button>
                               <div class="dropdown-content">
-                                <a href="#">Courses</a>
-                                <a href="#">Training Centers</a>
+                                <a href="SnowSchoolPage.html">Courses</a>
+                                <a href="RGUSkiTripPage.html">Ski trip</a>
                                 <a href="#">Where to Ski</a>
                               </div>
                             </div>
