--- a/SnowSchoolPage.html
+++ b/SnowSchoolPage.html
@@ -227,9 +227,9 @@ h1 {
     
 <div class="header">  
 <div class="social">
-  <a href="#" class="fa fa-facebook"></a>
-  <a href="#" class="fa fa-twitter"></a>
-  <a href="#" class="fa fa-instagram"></a>
+    <a href="https://www.facebook.com/RGUsnowsports/" class="fa fa-facebook"></a>
+    <a href="https://twitter.com/rgusnow?lang=en" class="fa fa-twitter"></a>
+    <a href="https://www.instagram.com/rgusnow/?hl=en" class="fa fa-instagram"></a>
   </div>  
 </div>
     
