--- a/eventcalender.html
+++ b/eventcalender.html
@@ -98,7 +98,7 @@
                               <button class="dropbtn">Training</button>
                               <div class="dropdown-content">
                                 <a href="SnowSchoolPage.html">Courses</a>
-                                <a href="RGUSkiTripPage.html">Skib trip</a>
+                                <a href="RGUSkiTripPage.html">Ski trip</a>
                                 <a href="where_to_ski.html">Where to Ski</a>
                               </div>
                             </div>
