--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   <div class="dropdown">
                       <button class="dropbtn">About</button>
                       <div class="dropdown-content">
-                        <a href="#">Contact Info</a>
+                        <a href="contact.html">Contact Info</a>
                         <a href="#">Strategy</a>
                         <a href="#">Membership</a>
                       </div>
@@ -77,7 +77,7 @@
                       <div class="dropdown">
                           <button class="dropbtn">Media</button>
                           <div class="dropdown-content">
-                            <a href="#">Image Gallery</a>
+                            <a href="gallery.html">Image Gallery</a>
                             <a href="#">Videos</a>
                             <a href="#">Our Members</a>
                           </div>
