--- a/where_to_ski.html
+++ b/where_to_ski.html
@@ -294,7 +294,7 @@ section {
 
             <div class="mynavbar">      
                 <div class="dropdown">
-                    <button  href=”default.html” class='active-page' class="dropbtn">Home</button>
+                    <button  href=”index.html”  class="dropbtn">Home</button>
                    
                   </div>
 
@@ -336,7 +336,7 @@ section {
                               <div class="dropdown-content">
                                 <a href="SnowSchoolPage.html">Courses</a>
                                 <a href="RGUSkiTripPage.html">Ski trip</a>
-                                <a href="where_to_ski.html">Where to Ski</a>
+                                <a href="where_to_ski.html" class='active-page' >Where to Ski</a>
                               </div>
                             </div>
                     
