--- a/snowboardequip.html
+++ b/snowboardequip.html
@@ -395,7 +395,7 @@ section {
 
             <div class="mynavbar">      
                 <div class="dropdown">
-                    <button  href=”default.html” class='active-page' class="dropbtn">Home</button>
+                    <button  href=”index.html”  class="dropbtn">Home</button>
                    
                   </div>
 
@@ -412,7 +412,7 @@ section {
                         <button class="dropbtn">Equipment</button>
                         <div class="dropdown-content">
                           <a href="skiequip.html">Ski</a>
-                          <a href="snowboardequip.html">Snowboarding</a>
+                          <a href="snowboardequip.html" class='active-page' >Snowboarding</a>
                           <a href="equipment.html">General</a>
                         </div>
                       </div>
