--- a/skiequip.html
+++ b/skiequip.html
@@ -395,7 +395,7 @@ section {
 
             <div class="mynavbar">      
                 <div class="dropdown">
-                    <button  href=”default.html” class='active-page' class="dropbtn">Home</button>
+                    <button  href=”index.html”  class="dropbtn">Home</button>
                    
                   </div>
 
@@ -411,7 +411,7 @@ section {
                     <div class="dropdown">
                         <button class="dropbtn">Equipment</button>
                         <div class="dropdown-content">
-                          <a href="skiequip.html">Ski</a>
+                          <a href="skiequip.html" class='active-page'>Ski</a>
                           <a href="snowboardequip.html">Snowboarding</a>
                           <a href="equipment.html">General</a>
                         </div>
