--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <div class="mynavbar">      
                 <div class="dropdown">
-                    <button  href=”default.html” class='active-page' class="dropbtn">Home</button>
+                    <button  href=”index.html” class='active-page' class="dropbtn">Home</button>
                    
                   </div>
 
