--- a/eventcalender.html
+++ b/eventcalender.html
@@ -57,7 +57,7 @@
 
             <div class="mynavbar">      
                 <div class="dropdown">
-                    <button  href=”default.html” class='active-page' class="dropbtn">Home</button>
+                    <button  href=”index.html”  class="dropbtn">Home</button>
                    
                   </div>
 
@@ -89,7 +89,7 @@
                         <div class="dropdown">
                             <button class="dropbtn">Competitions</button>
                             <div class="dropdown-content">
-                              <a href="eventcalender.html">Events calender</a>
+                              <a href="eventcalender.html" class='active-page' >Events calender</a>
                               <a href="#">Results</a>
                               <a href="#">Resources</a>
                             </div>
