--- a/eventcalender.html
+++ b/eventcalender.html
@@ -57,7 +57,7 @@
 
             <div class="mynavbar">      
                 <div class="dropdown">
-                    <button  href=”index.html”  class="dropbtn">Home</button>
+                    <button onclick="window.location.href = 'index.html';" class="dropbtn">Home</button>
                    
                   </div>
 
@@ -87,9 +87,9 @@
                           </div>
                         </div>
                         <div class="dropdown">
-                            <button class="dropbtn">Competitions</button>
+                            <button class="dropbtn" class='active-page' >Competitions</button>
                             <div class="dropdown-content">
-                              <a href="eventcalender.html" class='active-page' >Events calender</a>
+                              <a href="eventcalender.html" style="text-decoration: underline;">Events calender</a>
                               <a href="#">Results</a>
                               <a href="#">Resources</a>
                             </div>
