--- a/eventcalender.html
+++ b/eventcalender.html
@@ -87,7 +87,7 @@
                           </div>
                         </div>
                         <div class="dropdown">
-                            <button class="dropbtn" class='active-page' >Competitions</button>
+                            <button class="dropbtn"  style="text-decoration: underline;" class='active-page' >Competitions</button>
                             <div class="dropdown-content">
                               <a href="eventcalender.html" style="text-decoration: underline;">Events calender</a>
                               <a href="#">Results</a>
