--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <div class="mynavbar">      
                 <div class="dropdown">
-                    <button  href=”index.html” class='active-page' class="dropbtn">Home</button>
+                 <button onclick="window.location.href = 'index.html';" class="dropbtn" style="text-decoration: underline;">Home</button>
                    
                   </div>
 
