--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                     <section>
                                         <div>
                                                 <div class="container">
-                                                        <img src="snowboarder2.jpg" alt="Skitrip"  style="width:250px; height: 200px; " >
+                                                         <a href="where_to_ski.html"><img src="snowboarder2.jpg" alt="Skitrip"  style="width:250px; height: 200px; " ></a>
                                                         <div class="content">
                                                            <p>Where can you ski in Scotland?</p>
                                                         </div>
