--- a/eventcalender.html
+++ b/eventcalender.html
@@ -89,7 +89,7 @@
                         <div class="dropdown">
                             <button class="dropbtn"  style="text-decoration: underline;" class='active-page' >Competitions</button>
                             <div class="dropdown-content">
-                              <a href="eventcalender.html"class='active-page'>Events calender</a>
+                              <a href="eventcalender.html" style="text-decoration: underline;" class='active-page'>Events calender</a>
                               <a href="#">Results</a>
                               <a href="#">Resources</a>
                             </div>
