--- a/gallery.html
+++ b/gallery.html
@@ -279,7 +279,7 @@ a {
 
             <div class="mynavbar">      
                 <div class="dropdown">
-                    <button  href=”default.html” class='active-page' class="dropbtn">Home</button>
+                     <button onclick="window.location.href = 'index.html';" class="dropbtn">Home</button>
                    
                   </div>
 
@@ -301,9 +301,9 @@ a {
                         </div>
                       </div>
                       <div class="dropdown">
-                          <button class="dropbtn">Media</button>
+                          <button class="dropbtn"  style="text-decoration: underline;" class='active-page' Media</button>
                           <div class="dropdown-content">
-                            <a href="gallery.html">Image Gallery</a>
+                            <a href="gallery.html" class='active-page'> Image Gallery</a>
                             <a href="#">Videos</a>
                             <a href="#">Our Members</a>
                           </div>
