--- a/gallery.html
+++ b/gallery.html
@@ -301,7 +301,7 @@ a {
                         </div>
                       </div>
                       <div class="dropdown">
-                          <button class="dropbtn"  style="text-decoration: underline;" class='active-page' Media</button>
+                          <button class="dropbtn"  style="text-decoration: underline;" class='active-page'> Media</button>
                           <div class="dropdown-content">
                             <a href="gallery.html" class='active-page'> Image Gallery</a>
                             <a href="#">Videos</a>
