--- a/SnowSchoolPage.html
+++ b/SnowSchoolPage.html
@@ -258,7 +258,7 @@ h1 {
 
             <div class="mynavbar">      
                 <div class="dropdown">
-                    <button  href=”default.html” class='active-page' class="dropbtn">Home</button>
+                    <button onclick="window.location.href = 'index.html';" class="dropbtn">Home</button>
                    
                   </div>
 
@@ -296,9 +296,9 @@ h1 {
                             </div>
                           </div>
                           <div class="dropdown">
-                              <button class="dropbtn">Training</button>
+                              <button class="dropbtn"  style="text-decoration: underline;" class='active-page'>Training</button>
                               <div class="dropdown-content">
-                                <a href="SnowSchoolPage.html">Courses</a>
+                                <a href="SnowSchoolPage.html" class='active-page' >Courses</a>
                                 <a href="RGUSkiTripPage.html">Ski trip</a>
                                 <a href="where_to_ski.html">Where to Ski</a>
                               </div>
