--- a/contact.html
+++ b/contact.html
@@ -279,14 +279,14 @@ a {
 
             <div class="mynavbar">      
                 <div class="dropdown">
-                    <button  href=”default.html” class='active-page' class="dropbtn">Home</button>
+                    <button onclick="window.location.href = 'index.html';" class="dropbtn">Home</button>
                    
                   </div>
 
                   <div class="dropdown">
-                      <button class="dropbtn">About</button>
+                      <button class="dropbtn"  style="text-decoration: underline;" class='active-page'>About</button>
                       <div class="dropdown-content">
-                        <a href="contact.html">Contact Info</a>
+                        <a href="contact.html" class='active-page'>Contact Info</a>
                         <a href="#">Strategy</a>
                         <a href="#">Membership</a>
                       </div>
