--- a/equipment.html
+++ b/equipment.html
@@ -375,7 +375,7 @@ section {
 
             <div class="mynavbar">      
                 <div class="dropdown">
-                    <button  href=”default.html” class='active-page' class="dropbtn">Home</button>
+                    <button onclick="window.location.href = 'index.html';" class="dropbtn">Home</button>
                    
                   </div>
 
@@ -389,11 +389,11 @@ section {
                     </div>
 
                     <div class="dropdown">
-                        <button class="dropbtn">Equipment</button>
+                        <button class="dropbtn"  style="text-decoration: underline;" class='active-page'>Equipment</button>
                         <div class="dropdown-content">
                           <a href="skiequip.html">Ski</a>
                           <a href="snowboardequip.html">Snowboarding</a>
-                          <a href="equipment.html">General</a>
+                          <a href="equipment.html" class='active-page' >General</a>
                         </div>
                       </div>
                       <div class="dropdown">
