--- a/skiequip.html
+++ b/skiequip.html
@@ -395,7 +395,7 @@ section {
 
             <div class="mynavbar">      
                 <div class="dropdown">
-                    <button  href=”index.html”  class="dropbtn">Home</button>
+                    <button onclick="window.location.href = 'index.html';" class="dropbtn">Home</button>
                    
                   </div>
 
@@ -409,7 +409,7 @@ section {
                     </div>
 
                     <div class="dropdown">
-                        <button class="dropbtn">Equipment</button>
+                        <button class="dropbtn"  style="text-decoration: underline;" class='active-page'>Equipment</button>
                         <div class="dropdown-content">
                           <a href="skiequip.html" class='active-page'>Ski</a>
                           <a href="snowboardequip.html">Snowboarding</a>
