--- a/where_to_ski.html
+++ b/where_to_ski.html
@@ -294,7 +294,7 @@ section {
 
             <div class="mynavbar">      
                 <div class="dropdown">
-                    <button  href=”index.html”  class="dropbtn">Home</button>
+                    <button onclick="window.location.href = 'index.html';" class="dropbtn">Home</button>
                    
                   </div>
 
@@ -332,7 +332,7 @@ section {
                             </div>
                           </div>
                           <div class="dropdown">
-                              <button class="dropbtn">Training</button>
+                              <button class="dropbtn"  style="text-decoration: underline;" class='active-page'>Training</button>
                               <div class="dropdown-content">
                                 <a href="SnowSchoolPage.html">Courses</a>
                                 <a href="RGUSkiTripPage.html">Ski trip</a>
