--- a/snowboardequip.html
+++ b/snowboardequip.html
@@ -479,7 +479,7 @@ section {
                                         <img src="snowboarding.jpg" alt="helmats" style="width:35%;" >
                                           </a>
                                     <div class="content">
-                                            <h1> helmat</h1>
+                                            <h1> helmet</h1>
                                             <p>The most important safe equipment you will need</p>
                                     </div>
                                   </div> 
