--- a/skiequip.html
+++ b/skiequip.html
@@ -480,7 +480,7 @@ section {
                                         <img src="skiing.jpg" alt="helmats" style="width:35%;" >
                                           </a>
                                     <div class="content">
-                                            <h1>Ski helmats</h1>
+                                            <h1>Ski helmets</h1>
                                             <p>The most important safe equipment you will need</p>
                                     </div>
                                   </div> 
